# CopySecureFast

./: .gitignore  README.md  csf_config.py  csfd-tray  pyproject.toml
csf_client/: __init__.py  daemon.py  exceptions.py  protocol.py
csf_ui/: __init__.py  main.py  queue_window.py  settings_menu.py  throttle_popover.py  tray.py
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs  types.rs
daemon/src/ops/: copy.rs  mod.rs
daemon/src/queue/: db.rs  mod.rs
daemon/src/rpc/: mod.rs  server.rs
docs/: CONTEXTO.md  OVERVIEW.md
docs/plans/: phase-02-daemon-spike.md.implemented  phase-03-client-ui.md.implemented  phase-05-thunar.md.implemented
tests/: test_client.py
thunar-extension/: README.md  copysecurefast-uca.xml  csf-thunar-helper.py
thunar-extension/copysecurefast/: __init__.py  extension.py
