[package]
name = "csfd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
filetime = "0.2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "csfd"
path = "src/main.rs"